@@ -73,6 +73,15 @@
   <build>
     <plugins>
       <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+<!--        <version>3.0.0-M5</version>-->
+        <configuration>
+          <argLine>
+            --add-opens com.udacity.security/com.udacity.security.service=ALL-UNNAMED
+          </argLine>
+        </configuration>
+      </plugin>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-assembly-plugin</artifactId>
         <configuration>
